Bug 186722 - kate crashed while trying to open a file
Summary: kate crashed while trying to open a file
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-10 05:28 UTC by msp
Modified: 2009-04-07 23:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description msp 2009-03-10 05:28:58 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    Ubuntu Packages

Application: Kate (kate), signal SIGSEGV
0xb6777f1c in nanosleep () from /lib/libc.so.6

Thread 1 (Thread 0xb5b2d6c0 (LWP 6172)):
[KCrash Handler]
#5  0x090e0b4b in ?? ()
#6  0xb7e8daa4 in KParts::ReadOnlyPart::abortLoad () from /usr/lib/libkparts.so.4
#7  0xb7e8f3db in KParts::ReadOnlyPart::closeUrl () from /usr/lib/libkparts.so.4
#8  0xb7e9264e in KParts::ReadOnlyPart::~ReadOnlyPart () from /usr/lib/libkparts.so.4
#9  0xb7e927bf in KParts::ReadWritePart::~ReadWritePart () from /usr/lib/libkparts.so.4
#10 0xb65a2721 in KTextEditor::Document::~Document () from /usr/lib/libktexteditor.so.4
#11 0xb4261086 in ?? () from /usr/lib/kde4/katepart.so
#12 0xb6a9d0ff in QObjectPrivate::deleteChildren () from /usr/lib/libQtCore.so.4
#13 0xb6aa5c43 in QObject::~QObject () from /usr/lib/libQtCore.so.4
#14 0xb6a8591e in QAbstractItemModel::~QAbstractItemModel () from /usr/lib/libQtCore.so.4
#15 0xb749ae98 in QStandardItemModel::~QStandardItemModel () from /usr/lib/libQtGui.so.4
#16 0xb7ee124f in ?? () from /usr/lib/libkateinterfaces.so.4
#17 0xb7ed54ce in KateApp::~KateApp () from /usr/lib/libkateinterfaces.so.4
#18 0xb7f36436 in kdemain () from /usr/lib/libkdeinit4_kate.so
#19 0x08048672 in _start ()
Comment 1 Dario Andres 2009-03-10 19:13:34 UTC
Does this happen when try to open every file? one specific file? Does this happen all the times or randomly ? 
If you can reproduce the crash at will, may you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? 
You need to install the "kdelibs5-dbg" and "kdesdk-dbg" packages
Thanks :)
Comment 2 Raphael Kubo da Costa 2009-04-07 23:06:24 UTC
SVN commit 950830 by rkcosta:

Fix the call to KJob::kill when the Cancel button is pressed - KJob::EmitResult must be passed so that ReadOnlyPart can handle the termination correctly.

BUG: 186722
BUG: 186980
BUG: 187538
CCBUG: 188231


 M  +14 -2     kuiserverjobtracker.cpp  
 M  +2 -0      kuiserverjobtracker.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=950830