Fix the call to KJob::kill when the Cancel button is pressed - KJob::EmitResult must be passed so that ReadOnlyPart can handle the termination correctly.

BUG: 186722
BUG: 186980
BUG: 187538
CCBUG: 188231

svn path=/trunk/KDE/kdelibs/; revision=950830